Update configuration files to enable actuator endpoints and adjust Hibernate settings
- Expose all actuator endpoints via `management.endpoints.web.exposure.include=*`.
- Change Hibernate `ddl-auto` from `validate` to `update` for schema management.

--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,13 @@
-spring.cloud.config.enabled=true
-spring.cloud.discovery.enabled=true
+
+
 spring.h2.console.enabled=true
+spring.cloud.discovery.enabled=true
+spring.cloud.config.enabled=true
+
+
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
+
+#activee le service de actuator(* <=> activee tout endpoint de actuator)
 management.endpoints.web.exposure.include=*
 
